.[2.0.0] - unreleased
[%collapsible]
====
[discrete]
=== Breaking Change

* https://github.com/serpro69/kotlin-faker/pull/219[#219] (:core) Extract faker's providers into several submodules of their own

[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/234[#234] (:extension) Add extension module for kotest property testing
* https://github.com/serpro69/kotlin-faker/pull/232[#232] (:core) Add support for alternative primary key when resolving values
* https://github.com/serpro69/kotlin-faker/pull/227[#227] Add BOM to manage faker versions
* https://github.com/serpro69/kotlin-faker/issues/222[#222] (:faker:databases) Create new Databases faker module
* https://github.com/serpro69/kotlin-faker/issues/218[#218] (:core) Allow creating custom fakers / generators

[discrete]
=== Fixed

* https://github.com/serpro69/kotlin-faker/pull/240[#240] (:core) Fix NoSuchElementException in `uk.company.name`
** Also fixes `uk.name.first_name` and `uk.name.last_name` to return both male and female names.
* https://github.com/serpro69/kotlin-faker/issues/207[#207] (:core) Regexify generates invalid value
* https://github.com/serpro69/kotlin-faker/issues/208[#208] (:core) Regexify fails with StackOverflowError

[discrete]
=== Other

* ...

====

.[1.16.0] - 2024-02-12
[%collapsible]
====
[discrete]
=== Breaking Change

* https://github.com/serpro69/kotlin-faker/pull/214[#214] (:core) Update `Faker#internet#domain` function which affects returned values
* https://github.com/serpro69/kotlin-faker/pull/213[#213] (:core) Add support for unique data generation to `Faker#random`

[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/215[#215] (:core) Add IPv4, IPv6 and MAC address generation to `Internet`
** `iPv4Address()`
** `publicIPv4Address()`
** `privateIPv4Address()`
** `iPv6Address()`
** `macAddress()`
* https://github.com/serpro69/kotlin-faker/pull/214[#214] (:core) Update dictionary files, including: